--- a/LuLu/App/Base.lproj/AboutWindow.xib
+++ b/LuLu/App/Base.lproj/AboutWindow.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="23727" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="24128" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="23727"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="24128"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -18,35 +18,38 @@
         <window allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="F0z-JX-Cv5">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" texturedBackground="YES"/>
             <rect key="contentRect" x="196" y="240" width="486" height="301"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="3440" height="1415"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="1512" height="948"/>
             <view key="contentView" id="se5-gp-TjO">
                 <rect key="frame" x="0.0" y="0.0" width="486" height="301"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lEv-Wj-6S5">
-                        <rect key="frame" x="10" y="190" width="110" height="106"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lEv-Wj-6S5">
+                        <rect key="frame" x="10" y="190" width="142" height="106"/>
                         <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="Icon" id="xKf-GK-m0k"/>
                     </imageView>
-                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Eaf-yA-bbe">
-                        <rect key="frame" x="158" y="231" width="116" height="50"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Eaf-yA-bbe">
+                        <rect key="frame" x="190" y="231" width="116" height="50"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="116" id="ppS-zp-hdl"/>
+                        </constraints>
                         <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="LuLuText" id="Ws8-bD-j2R"/>
                     </imageView>
-                    <button tag="101" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HZZ-Es-mpy">
+                    <button tag="101" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="HZZ-Es-mpy">
                         <rect key="frame" x="13" y="13" width="165" height="32"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <buttonCell key="cell" type="push" title="More Information" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="J9x-sM-h9S">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" size="13" name="Menlo-Regular"/>
                         </buttonCell>
+                        <constraints>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="165" id="Eru-Mi-GNh"/>
+                            <constraint firstAttribute="height" constant="32" id="iiV-hI-s3E"/>
+                        </constraints>
                         <connections>
                             <action selector="buttonHandler:" target="-2" id="Cgx-f4-Thr"/>
                         </connections>
                     </button>
-                    <scrollView fixedFrame="YES" horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5if-J7-OZf">
+                    <scrollView horizontalLineScroll="10" horizontalPageScroll="10" verticalLineScroll="10" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5if-J7-OZf">
                         <rect key="frame" x="20" y="68" width="446" height="97"/>
-                        <autoresizingMask key="autoresizingMask"/>
                         <clipView key="contentView" drawsBackground="NO" id="WiG-CC-JV3">
                             <rect key="frame" x="1" y="1" width="444" height="95"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -76,40 +79,69 @@
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                         <scroller key="verticalScroller" wantsLayer="YES" verticalHuggingPriority="750" doubleValue="1" horizontal="NO" id="6bw-3O-hPc">
-                            <rect key="frame" x="429" y="1" width="16" height="95"/>
+                            <rect key="frame" x="428" y="1" width="17" height="95"/>
                             <autoresizingMask key="autoresizingMask"/>
                         </scroller>
                     </scrollView>
-                    <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fZJ-sG-ZuJ">
-                        <rect key="frame" x="20" y="166" width="447" height="19"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                    <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="fZJ-sG-ZuJ">
+                        <rect key="frame" x="174" y="166" width="138" height="19"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Patrons &amp; Friends" id="fJg-qw-wDf">
                             <font key="font" size="13" name="Menlo-Regular"/>
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
-                    <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" allowsCharacterPickerTouchBarItem="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OSm-xS-Dmd">
+                    <textField focusRingType="none" horizontalHuggingPriority="251" verticalHuggingPriority="750" allowsCharacterPickerTouchBarItem="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OSm-xS-Dmd">
                         <rect key="frame" x="158" y="217" width="182" height="19"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                        <constraints>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="178" id="HfP-dq-3um"/>
+                            <constraint firstAttribute="height" constant="19" id="b0B-7K-P5y"/>
+                        </constraints>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Version:" id="bBK-v0-ypq">
                             <font key="font" size="13" name="Menlo-Regular"/>
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
-                    <button tag="100" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xnd-Gw-0o8">
+                    <button tag="100" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="xnd-Gw-0o8">
                         <rect key="frame" x="308" y="13" width="165" height="32"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <buttonCell key="cell" type="push" title="Support Us!" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="6g3-Pg-x3P">
                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                             <font key="font" size="13" name="Menlo-Regular"/>
                         </buttonCell>
+                        <constraints>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="165" id="59K-qP-kKV"/>
+                        </constraints>
                         <connections>
                             <action selector="buttonHandler:" target="-2" id="gP0-s7-o6h"/>
                         </connections>
                     </button>
                 </subviews>
+                <constraints>
+                    <constraint firstItem="5if-J7-OZf" firstAttribute="top" secondItem="se5-gp-TjO" secondAttribute="top" constant="136" id="2au-vf-3aB"/>
+                    <constraint firstItem="fZJ-sG-ZuJ" firstAttribute="top" secondItem="OSm-xS-Dmd" secondAttribute="bottom" constant="32" id="3XY-Ua-j5O"/>
+                    <constraint firstItem="HZZ-Es-mpy" firstAttribute="baseline" secondItem="xnd-Gw-0o8" secondAttribute="baseline" id="7qP-Qq-72G"/>
+                    <constraint firstAttribute="trailing" secondItem="5if-J7-OZf" secondAttribute="trailing" constant="20" symbolic="YES" id="8ug-c5-MJo"/>
+                    <constraint firstItem="OSm-xS-Dmd" firstAttribute="top" secondItem="se5-gp-TjO" secondAttribute="top" constant="65" id="AQP-m8-lxG"/>
+                    <constraint firstAttribute="trailing" secondItem="xnd-Gw-0o8" secondAttribute="trailing" constant="13" id="Aiq-5V-70m"/>
+                    <constraint firstItem="HZZ-Es-mpy" firstAttribute="leading" secondItem="se5-gp-TjO" secondAttribute="leading" constant="13" id="AtV-fd-Wqa"/>
+                    <constraint firstItem="OSm-xS-Dmd" firstAttribute="leading" secondItem="se5-gp-TjO" secondAttribute="leading" constant="160" id="BAA-6k-eK7"/>
+                    <constraint firstItem="lEv-Wj-6S5" firstAttribute="top" secondItem="se5-gp-TjO" secondAttribute="top" constant="5" id="DgN-Ex-4Xm"/>
+                    <constraint firstItem="5if-J7-OZf" firstAttribute="leading" secondItem="se5-gp-TjO" secondAttribute="leading" constant="20" symbolic="YES" id="E98-mx-omB"/>
+                    <constraint firstItem="lEv-Wj-6S5" firstAttribute="leading" secondItem="se5-gp-TjO" secondAttribute="leading" constant="10" id="KJZ-kJ-Dup"/>
+                    <constraint firstItem="Eaf-yA-bbe" firstAttribute="leading" secondItem="lEv-Wj-6S5" secondAttribute="trailing" constant="38" id="LK0-vk-QnO"/>
+                    <constraint firstItem="HZZ-Es-mpy" firstAttribute="top" secondItem="5if-J7-OZf" secondAttribute="bottom" constant="23" id="PRG-Xn-ab5"/>
+                    <constraint firstItem="xnd-Gw-0o8" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="HZZ-Es-mpy" secondAttribute="trailing" constant="12" symbolic="YES" id="Th4-Vh-1mg"/>
+                    <constraint firstItem="Eaf-yA-bbe" firstAttribute="top" secondItem="se5-gp-TjO" secondAttribute="top" constant="20" symbolic="YES" id="X5j-sA-lIC"/>
+                    <constraint firstItem="HZZ-Es-mpy" firstAttribute="firstBaseline" secondItem="xnd-Gw-0o8" secondAttribute="firstBaseline" id="beC-2o-c2r"/>
+                    <constraint firstAttribute="bottom" secondItem="HZZ-Es-mpy" secondAttribute="bottom" constant="13" id="fck-L0-3Gl"/>
+                    <constraint firstItem="5if-J7-OZf" firstAttribute="centerX" secondItem="fZJ-sG-ZuJ" secondAttribute="centerX" id="foF-Fz-ZUq"/>
+                    <constraint firstItem="OSm-xS-Dmd" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="lEv-Wj-6S5" secondAttribute="trailing" symbolic="YES" id="gFX-tq-XWF"/>
+                    <constraint firstItem="fZJ-sG-ZuJ" firstAttribute="top" secondItem="Eaf-yA-bbe" secondAttribute="bottom" constant="46" id="lMg-AB-MCE"/>
+                    <constraint firstItem="5if-J7-OZf" firstAttribute="top" secondItem="fZJ-sG-ZuJ" secondAttribute="bottom" constant="1" id="mdh-gs-0O3"/>
+                    <constraint firstItem="fZJ-sG-ZuJ" firstAttribute="top" secondItem="lEv-Wj-6S5" secondAttribute="bottom" constant="5" id="tYE-Pb-iac"/>
+                    <constraint firstAttribute="trailing" secondItem="OSm-xS-Dmd" secondAttribute="trailing" constant="148" id="zKe-Fy-z6s"/>
+                </constraints>
             </view>
             <connections>
                 <outlet property="delegate" destination="-2" id="0bl-1N-AYu"/>
